# bayesian-t1dm

./: .env.example  .gitignore  AGENTS.md  README.md  api_calls.ipynb  environment.yml  pyproject.toml
archive/r/: bayesian-t1dm.R  extra-code.R  helper_functions.R
docs/: TECHNICAL_LAB_NOTEBOOK.md  technical.md
notebooks/: main.ipynb
old/scripts/: tslim-data-analysis.R
src/bayesian_t1dm/: __init__.py  acquisition.py  cli.py  evaluate.py  features.py  health_auto_export.py  ingest.py  insulin.py  io.py  model.py  observability.py  paths.py  promotion_policy.py  quality.py  recommend.py  report.py  review.py  status.py  tandem_browser.py  therapy_research.py  timeline_pull.py
src/bayesian_t1dm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_acquisition.py  test_cli.py  test_end_to_end.py  test_evaluate.py  test_features.py  test_health_auto_export.py  test_ingest.py  test_insulin.py  test_model.py  test_observability.py  test_paths.py  test_promotion_policy.py  test_realistic_smoke.py  test_recommend.py  test_report.py  test_status.py  test_tandem_browser.py  test_therapy_research.py  test_timeline_pull.py
tests/fixtures/tandem/: activity.csv  basal.csv  bolus.csv  cgm.csv
tests/fixtures/tandem_realistic_14d/: basal.csv  bolus.csv  cgm.csv
