[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesian-t1dm"
version = "0.1.0"
description = "Bayesian forecasting and recommendation pipeline for personal T1DM data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "openpyxl>=3.1",
  "pyarrow>=15",
  "arviz>=0.16",
  "pymc>=5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
tconnectsync = [
  "tconnectsync",
]

[project.scripts]
bayesian-t1dm = "bayesian_t1dm.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
